// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`buildImportItems 1`] = `
Array [
  Object {
    "description": "src2.file1",
    "isExtraImport": undefined,
    "label": "CONSTANT_SRC2_FILE1_1",
  },
  Object {
    "isExtraImport": true,
    "label": "full_package1",
  },
  Object {
    "isExtraImport": true,
    "label": "full_package2",
  },
  Object {
    "description": "group1a.subdir_1",
    "isExtraImport": true,
    "label": "group1a_1",
  },
  Object {
    "description": "group1a.subdir_2",
    "isExtraImport": true,
    "label": "group1a_2",
  },
  Object {
    "description": "group1b.subdir_1",
    "isExtraImport": true,
    "label": "group1b_1",
  },
  Object {
    "description": "group2a.subdir_1",
    "isExtraImport": true,
    "label": "group2a_1",
  },
  Object {
    "description": "group2a.subdir_2",
    "isExtraImport": true,
    "label": "group2a_2",
  },
  Object {
    "description": "group2b.subdir_1",
    "isExtraImport": true,
    "label": "group2b_1",
  },
  Object {
    "description": "package3",
    "isExtraImport": true,
    "label": "package3_file1_1",
  },
  Object {
    "description": "package3",
    "isExtraImport": true,
    "label": "package3_file1_2",
  },
  Object {
    "description": "package3",
    "isExtraImport": true,
    "label": "package3_file1_3",
  },
  Object {
    "description": "package3",
    "isExtraImport": true,
    "label": "package3_file2_1",
  },
  Object {
    "description": "package3",
    "isExtraImport": true,
    "label": "package3_src2_file1_1",
  },
  Object {
    "description": "package4",
    "isExtraImport": true,
    "label": "package4_file1_1",
  },
  Object {
    "description": "package4",
    "isExtraImport": true,
    "label": "package4_file1_2",
  },
  Object {
    "description": "package4",
    "isExtraImport": true,
    "label": "package4_file1_3",
  },
  Object {
    "description": "package5",
    "isExtraImport": true,
    "label": "package5_file1_1",
  },
  Object {
    "description": "package5",
    "isExtraImport": true,
    "label": "package5_file1_2",
  },
  Object {
    "description": "package5",
    "isExtraImport": true,
    "label": "package5_file1_3",
  },
  Object {
    "description": "src1.file1",
    "isExtraImport": undefined,
    "label": "Class_file1_1",
  },
  Object {
    "description": "src1.file1",
    "isExtraImport": undefined,
    "label": "Class_file1_2",
  },
  Object {
    "description": "src1.file1",
    "isExtraImport": undefined,
    "label": "fn_file1_1",
  },
  Object {
    "description": "src1.file1",
    "isExtraImport": undefined,
    "label": "fn_file1_2",
  },
  Object {
    "description": "src1.file1",
    "isExtraImport": undefined,
    "label": "CONSTANT_FILE1_1",
  },
  Object {
    "description": "src1.file1",
    "isExtraImport": undefined,
    "label": "CONSTANT_FILE1_2",
  },
  Object {
    "description": "src1.file2",
    "isExtraImport": undefined,
    "label": "Class_file2_1",
  },
  Object {
    "description": "src1.file2",
    "isExtraImport": undefined,
    "label": "Class_file2_2",
  },
  Object {
    "description": "src1.file2",
    "isExtraImport": undefined,
    "label": "fn_file2_1",
  },
  Object {
    "description": "src1.file2",
    "isExtraImport": undefined,
    "label": "fn_file2_2",
  },
]
`;

exports[`cacheProject 1`] = `
Object {
  "_extraImports": Object {
    "full_package1": Object {
      "importEntirePackage": true,
      "isExtraImport": true,
    },
    "full_package2": Object {
      "importEntirePackage": true,
      "isExtraImport": true,
    },
    "group1a.subdir_1": Object {
      "exports": Array [
        "group1a_1",
      ],
      "isExtraImport": true,
    },
    "group1a.subdir_2": Object {
      "exports": Array [
        "group1a_2",
      ],
      "isExtraImport": true,
    },
    "group1b.subdir_1": Object {
      "exports": Array [
        "group1b_1",
      ],
      "isExtraImport": true,
    },
    "group2a.subdir_1": Object {
      "exports": Array [
        "group2a_1",
      ],
      "isExtraImport": true,
    },
    "group2a.subdir_2": Object {
      "exports": Array [
        "group2a_2",
      ],
      "isExtraImport": true,
    },
    "group2b.subdir_1": Object {
      "exports": Array [
        "group2b_1",
      ],
      "isExtraImport": true,
    },
    "package3": Object {
      "exports": Array [
        "package3_file1_1",
        "package3_file1_2",
        "package3_file1_3",
        "package3_file2_1",
        "package3_src2_file1_1",
      ],
      "isExtraImport": true,
    },
    "package4": Object {
      "exports": Array [
        "package4_file1_1",
        "package4_file1_2",
        "package4_file1_3",
      ],
      "isExtraImport": true,
    },
    "package5": Object {
      "exports": Array [
        "package5_file1_1",
        "package5_file1_2",
        "package5_file1_3",
      ],
      "isExtraImport": true,
    },
  },
  "src1/file1.py": Object {
    "exports": Array [
      "Class_file1_1",
      "Class_file1_2",
      "fn_file1_1",
      "fn_file1_2",
      "CONSTANT_FILE1_1",
      "CONSTANT_FILE1_2",
    ],
  },
  "src1/file2.py": Object {
    "exports": Array [
      "Class_file2_1",
      "Class_file2_2",
      "fn_file2_1",
      "fn_file2_2",
    ],
  },
  "src2/file1.py": Object {
    "exports": Array [
      "CONSTANT_SRC2_FILE1_1",
    ],
  },
}
`;

exports[`insertImort | insertImport - import order - comment-with-code-right-after.py - original order 1`] = `
"# I'm a comment
from apackage import apackage_fn
import full_package1
import full_package2
from package3 import (package3_file1_1, package3_file1_2, package3_file1_3,
    package3_file2_1, package3_src2_file1_1)
from package4 import package4_file1_1, package4_file1_2, package4_file1_3
from package5 import package5_file1_1, package5_file1_2, package5_file1_3

from group1a.subdir_1 import group1a_1
from group1a.subdir_2 import group1a_2
from group1b.subdir_1 import group1b_1

from group2a.subdir_1 import group2a_1
from group2a.subdir_2 import group2a_2
from group2b.subdir_1 import group2b_1

from src1.file1 import (Class_file1_1, Class_file1_2, CONSTANT_FILE1_1,
    CONSTANT_FILE1_2, fn_file1_1, fn_file1_2)
from src1.file2 import Class_file2_1, Class_file2_2, fn_file2_1, fn_file2_2
from src2.file1 import CONSTANT_SRC2_FILE1_1

def foo():
    pass
"
`;

exports[`insertImort | insertImport - import order - comment-with-linebreak-and-code.py - original order 1`] = `
"# I'm a comment
from apackage import apackage_fn
import full_package1
import full_package2
from package3 import (package3_file1_1, package3_file1_2, package3_file1_3,
    package3_file2_1, package3_src2_file1_1)
from package4 import package4_file1_1, package4_file1_2, package4_file1_3
from package5 import package5_file1_1, package5_file1_2, package5_file1_3

from group1a.subdir_1 import group1a_1
from group1a.subdir_2 import group1a_2
from group1b.subdir_1 import group1b_1

from group2a.subdir_1 import group2a_1
from group2a.subdir_2 import group2a_2
from group2b.subdir_1 import group2b_1

from src1.file1 import (Class_file1_1, Class_file1_2, CONSTANT_FILE1_1,
    CONSTANT_FILE1_2, fn_file1_1, fn_file1_2)
from src1.file2 import Class_file2_1, Class_file2_2, fn_file2_1, fn_file2_2
from src2.file1 import CONSTANT_SRC2_FILE1_1

def foo():
    pass
"
`;

exports[`insertImort | insertImport - import order - empty.py - original order 1`] = `
"from apackage import apackage_fn
import full_package1
import full_package2
from package3 import (package3_file1_1, package3_file1_2, package3_file1_3,
    package3_file2_1, package3_src2_file1_1)
from package4 import package4_file1_1, package4_file1_2, package4_file1_3
from package5 import package5_file1_1, package5_file1_2, package5_file1_3

from group1a.subdir_1 import group1a_1
from group1a.subdir_2 import group1a_2
from group1b.subdir_1 import group1b_1

from group2a.subdir_1 import group2a_1
from group2a.subdir_2 import group2a_2
from group2b.subdir_1 import group2b_1

from src1.file1 import (Class_file1_1, Class_file1_2, CONSTANT_FILE1_1,
    CONSTANT_FILE1_2, fn_file1_1, fn_file1_2)
from src1.file2 import Class_file2_1, Class_file2_2, fn_file2_1, fn_file2_2
from src2.file1 import CONSTANT_SRC2_FILE1_1
"
`;

exports[`insertImort | insertImport - import order - has-code.py - original order 1`] = `
"from apackage import apackage_fn
import full_package1
import full_package2
from package3 import (package3_file1_1, package3_file1_2, package3_file1_3,
    package3_file2_1, package3_src2_file1_1)
from package4 import package4_file1_1, package4_file1_2, package4_file1_3
from package5 import package5_file1_1, package5_file1_2, package5_file1_3

from group1a.subdir_1 import group1a_1
from group1a.subdir_2 import group1a_2
from group1b.subdir_1 import group1b_1

from group2a.subdir_1 import group2a_1
from group2a.subdir_2 import group2a_2
from group2b.subdir_1 import group2b_1

from src1.file1 import (Class_file1_1, Class_file1_2, CONSTANT_FILE1_1,
    CONSTANT_FILE1_2, fn_file1_1, fn_file1_2)
from src1.file2 import Class_file2_1, Class_file2_2, fn_file2_1, fn_file2_2
from src2.file1 import CONSTANT_SRC2_FILE1_1

def foo():
    pass
"
`;

exports[`insertImort | insertImport - import order - multiline-comment.py - original order 1`] = `
"\\"\\"\\"I'm a comment
   With multiple lines
\\"\\"\\"
from apackage import apackage_fn
import full_package1
import full_package2
from package3 import (package3_file1_1, package3_file1_2, package3_file1_3,
    package3_file2_1, package3_src2_file1_1)
from package4 import package4_file1_1, package4_file1_2, package4_file1_3
from package5 import package5_file1_1, package5_file1_2, package5_file1_3

from group1a.subdir_1 import group1a_1
from group1a.subdir_2 import group1a_2
from group1b.subdir_1 import group1b_1

from group2a.subdir_1 import group2a_1
from group2a.subdir_2 import group2a_2
from group2b.subdir_1 import group2b_1

from src1.file1 import (Class_file1_1, Class_file1_2, CONSTANT_FILE1_1,
    CONSTANT_FILE1_2, fn_file1_1, fn_file1_2)
from src1.file2 import Class_file2_1, Class_file2_2, fn_file2_1, fn_file2_2
from src2.file1 import CONSTANT_SRC2_FILE1_1
"
`;

exports[`insertImort | insertImport - import order - single-line-comment.py - original order 1`] = `
"# I'm a comment
from apackage import apackage_fn
import full_package1
import full_package2
from package3 import (package3_file1_1, package3_file1_2, package3_file1_3,
    package3_file2_1, package3_src2_file1_1)
from package4 import package4_file1_1, package4_file1_2, package4_file1_3
from package5 import package5_file1_1, package5_file1_2, package5_file1_3

from group1a.subdir_1 import group1a_1
from group1a.subdir_2 import group1a_2
from group1b.subdir_1 import group1b_1

from group2a.subdir_1 import group2a_1
from group2a.subdir_2 import group2a_2
from group2b.subdir_1 import group2b_1

from src1.file1 import (Class_file1_1, Class_file1_2, CONSTANT_FILE1_1,
    CONSTANT_FILE1_2, fn_file1_1, fn_file1_2)
from src1.file2 import Class_file2_1, Class_file2_2, fn_file2_1, fn_file2_2
from src2.file1 import CONSTANT_SRC2_FILE1_1
"
`;
